Fixed the Alignment issue

--- a/style.css
+++ b/style.css
@@ -210,10 +210,6 @@ hr {
   margin-left: 10%;
 }
 
-.Intrested {
-  margin-left: 25%;
-}
-
 .feedbacks {
   display: flex;
   flex-wrap: wrap;
